--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-core', version: '6.1.6'
     implementation group: 'org.springframework', name: 'spring-context', version: '6.1.6'
     implementation group: 'org.springframework', name: 'spring-beans', version: '6.1.6'
+    implementation group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.22'
     implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.17.0'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
 }
