--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,15 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    implementation group: 'org.springframework', name: 'spring-core', version: '6.1.6'
-    implementation group: 'org.springframework', name: 'spring-context', version: '6.1.6'
-    implementation group: 'org.springframework', name: 'spring-beans', version: '6.1.6'
+    implementation group: 'org.springframework', name: 'spring-core', version: '6.1.14'
+    implementation group: 'org.springframework', name: 'spring-context', version: '6.1.14'
+    implementation group: 'org.springframework', name: 'spring-beans', version: '6.1.14'
     implementation group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.22'
     implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.17.0'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
+
+    implementation 'org.springframework:spring-jdbc:6.1.6'
+    implementation 'org.postgresql:postgresql:42.7.2'
 }
 
 test {
