--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,10 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-beans', version: '6.1.14'
     implementation group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.22'
     implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.17.0'
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
+
+    implementation 'org.projectlombok:lombok:1.18.26'
+    compileOnly 'org.projectlombok:lombok:1.18.34'
+    annotationProcessor 'org.projectlombok:lombok:1.18.34'
 
     implementation 'org.springframework:spring-jdbc:6.1.6'
     implementation 'org.postgresql:postgresql:42.7.2'
